@@ -2,7 +2,7 @@ package org.fungover.haze;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collections;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -19,34 +19,34 @@ class HazeDatabaseTest {
 
     @Test
     void callingDeleteReturnsNumberOfSuccessfullyRemovedKeys() {
-        testDatabase.setNX("1", "test");
-        testDatabase.setNX("2", "test");
-        testDatabase.setNX("22", "thisShouldNotBeRemoved");
-        assertThat(testDatabase.delete(Arrays.asList("1", "2", "3", "4"))).isEqualTo(":2\r\n");
+        testDatabase.setNX(List.of("SETNX", "1", "test"));
+        testDatabase.setNX(List.of("SETNX", "2", "test"));
+        testDatabase.setNX(List.of("SETNX", "22", "thisShouldNotBeRemoved"));
+        assertThat(testDatabase.delete(List.of("1", "2", "3", "4"))).isEqualTo(":2\r\n");
     }
 
     @Test
     void callingDeleteRemovesTheSpecifiedKey() {
-        testDatabase.setNX("1", "thisWillBeRemoved");
+        testDatabase.setNX(List.of("SETNX", "1", "thisWillBeRemoved"));
         testDatabase.delete(Collections.singletonList("1"));
         assertThat(testDatabase.get("1")).isEqualTo("$-1\r\n");
     }
 
     @Test
     void callingGetReturnsTheCorrectValueIfItExists() {
-        testDatabase.setNX("someKey", "someValue");
+        testDatabase.setNX(List.of("SETNX", "someKey", "someValue"));
         assertThat(testDatabase.get("someKey")).isEqualTo("$9\r\nsomeValue\r\n");
     }
 
     @Test
     void testSetNxReturnZeroWhenExistingKeyAreUsedWithDifferentValue() {
-        testDatabase.setNX("1", "Hej");
-        assertThat(testDatabase.setNX("1", "Då")).isEqualTo(":0\r\n");
+        testDatabase.setNX(List.of("", "1", "Hej"));
+        assertThat(testDatabase.setNX(List.of("", "1", "Då"))).isEqualTo(":0\r\n");
     }
 
     @Test
     void testSetNxReturnOneWhenKeyDontExist() {
-        assertThat(testDatabase.setNX("2", "Då")).isEqualTo(":1\r\n");
+        assertThat(testDatabase.setNX(List.of("", "2", "Då"))).isEqualTo(":1\r\n");
     }
 
     @Test
